--- a/KosaESS/src/main/resources/templates/admin/manager_list.html
+++ b/KosaESS/src/main/resources/templates/admin/manager_list.html
@@ -114,7 +114,7 @@
 			<div class="content_info_wrap">
 				<div class="content_info">
 					<span>총 <span class="manager_list_cnt"
-						th:text="${#lists.size(managerList)}"></span> 명
+						th:text="${#lists.size(managerList)}"></span> 건
 					</span>
 				</div>
 				<div class="content_info_btn_wrap">
