--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -106,7 +106,7 @@
 								<td style="width: 35%;" th:text="${CurriculumDetailDTO.lctrNm}"></td>
 								<td th:text="${CurriculumDetailDTO.sbjtNm}"></td>
 								<td th:text="${CurriculumDetailDTO.profNm}"></td>
-								<td class="lctrTm" th:text="${CurriculumDetailDTO.lctrTm}"></td>
+								<td class="lctrTm" th:text="${CurriculumDetailDTOm.lctrT}"></td>
 							</tr>
 							<tfoot>
 								<tr>
