--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="content">
 			<div th:replace="~{/include/student_subbar :: subbar}"></div>
-			<div class="maincontent">
+			<div class="maincontent" style="padding-right:0;">
 				<div class="personalData">
 					<div class="listHead" style="height: 55px;">
 						<h3>개인 정보 조회/수정</h3>
