--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -29,7 +29,7 @@
 						<td th:if="${classDetail.clssCd} == 'CLS0000008'"
 							style="width: 15%; color: red;" th:text="${classDetail.cmcdNm}" )></td>
 						<td
-							th:if="${classDetail.clssCd} != 'CLS0000002' and ${classDetail.clssCd} != 'CLS0000008'"
+							th:if="${classDetail.clssCd != 'CLS0000002' and classDetail.clssCd != 'CLS0000008'}"
 							style="width: 15%;" th:text="${classDetail.cmcdNm}" )></td>
 					</tr>
 					<tr>
@@ -160,10 +160,13 @@
 				<ul style="padding: 0;">
 					<li th:if="${class2 != null}">
 						<div class="veiwClass1">
-							<span th:if="${class2.cmcdNm == '접수중'}"
+							<span th:if="${class2.clssCd} == 'CLS0000002'"
+								th:text="${class2.cmcdNm}"
+								style="font-weight: bold; color: blue;"></span> <span
+								th:if="${class2.clssCd} == 'CLS0000008'"
 								th:text="${class2.cmcdNm}" style="font-weight: bold;"></span> <span
-								th:if="${class2.cmcdNm != '접수중'}" th:text="${class2.cmcdNm}"
-								style="color: black;"></span>
+								th:if="${class2.clssCd != 'CLS0000002' and class2.clssCd != 'CLS0000008'}"
+								th:text="${class2.cmcdNm}" style="color: black;"></span>
 							<h2 th:text="${class2.clssNm}"></h2>
 							<div th:if="${class2.fileId!=null}">
 								<img
@@ -178,10 +181,13 @@
 					</li>
 					<li th:if="${class1 != null}">
 						<div class="veiwclass2">
-							<span th:if="${class1.cmcdNm == '접수중'}"
+							<span th:if="${class1.clssCd} == 'CLS0000002'"
+								th:text="${class1.cmcdNm}"
+								style="font-weight: bold; color: blue;"></span> <span
+								th:if="${class1.clssCd}== 'CLS0000008'"
 								th:text="${class1.cmcdNm}" style="font-weight: bold;"></span> <span
-								th:if="${class1.cmcdNm != '접수중'}" th:text="${class1.cmcdNm}"
-								style="color: black;"></span>
+								th:if="${class1.clssCd != 'CLS0000002' and class1.clssCd != 'CLS0000008'}"
+								th:text="${class1.cmcdNm}" style="color: black;"></span>
 							<h2 th:text="${class1.clssNm}"></h2>
 							<div th:if="${class1.fileNm!=null}">
 								<img th:src="@{/img/__${class1.fileNm}__}">
