--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -149,6 +149,9 @@
 <!-- 사유서 조회 모달 -->
 <div class="resn_modal_wrap">
 	<div class="resn_modal">
+		<div class="modal_close_wrap">
+			<img src="/img/x_white.png" onclick="closeModal()">
+		</div>
 		<div class="wlog_info">
 			<table>
 				<tr>
