--- a/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <head>
-<link th:href="@{/css/manager/manager_subsidy_view.css}" rel="stylesheet" />
+<link th:href="@{/css/manager/manager_subsidy_insert.css}" rel="stylesheet" />
 <link th:href="@{/css/manager/alert_box.css}" rel="stylesheet" />
 </head>
 <body>
@@ -33,59 +33,43 @@
 		</div>
 		<!-- content wrap-->
 		<div class="content_wrap">
-			<div class="search_filter_wrap">
+			<div class="insert_wrap">
 				<!-- 검색 필터 테이블 -->
-				<div class="search_filter_table">
-					<div class="search_filter_name">
+				<div class="insert_table">
+					<div class="insert_name">
 						교육과정
 					</div>
-					<div class="search_filter_input">
+					<div class="insert_input">
 						<select id="classId">
 							<option value="" disabled selected>교육과정명을 선택하세요</option>
 							<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 						</select>
 					</div>
-					<div class="search_filter_name">
-						검색 기간
+					<div class="insert_name">
+						지급 기준 연월
 					</div>
-					<div class="search_filter_input">
+					<div class="insert_input">
 						<select id="start_date_y">
+							<option value="" disabled selected>연</option>
+							<option th:each="yNum:${#numbers.sequence(__${#calendars.format(#calendars.createNow(), 'yyyy')}__,1980)}" th:text="${yNum}" th:value="${yNum}"/>
 						</select>
 						<select id="start_date_m">
-							<option>
-						</select>
-						<span> ~ </span>
-						<select id="end_date_y">
-						</select>
-						<select id="end_date_m">
+							<option value="" disabled selected>월</option>
+							<option th:each="monthNum:${#numbers.sequence(1,12)}" th:text="${monthNum}" th:value="${monthNum}"/>
 						</select>
 					</div>
-					<div class="search_filter_name">검색어</div>
-					<div class="search_filter_input">
-						<input type="text" class="input_keyword" placeholder="이메일 또는 이름">
-					</div>
-					<div class="search_filter_name">지급 상태</div>
-					<div class="search_filter_input">
-						<span class="chk_all_span">
-							<label th:text="전체" class="chk_all_label"></label> <input type="checkbox" checked="checked" id="chk_all_cmpt">
-						</span>
-						<span class="chk_all_span" th:each="monyCN:${monyCodeNameList}">
-							<label class="mony_name" th:text="${monyCN.cmcdNm}"></label>
-							<input class="mony_checkbox" type="checkbox" checked="checked" th:value="${monyCN.cmcdId}">
-						</span>
+					<div class="insert_name">교육일수</div>
+					<div class="insert_input">
+						<input type="number" class="input_workday">
 					</div>
 				</div>
 				<!-- 검색 버튼 -->
-				<div class="search_filter_btn_wrap">
-					<button class="search_reset_btn" th:id="resetButton"
-						onclick="reset()">초기화</button>
-					<button class="search_filter_btn" th:id="searchButton"
-						onclick="search()">검색</button>
+				<div class="insert_btn_wrap">
+					<button class="insert_btn" id="insert_btn" onclick="insert()">등록</button>
 				</div>
 				<!-- End : 검색 버튼 -->
 			</div>
 			<!-- End : 검색 필터 테이블-->
-
 			<!-- 테이블 조작 -->
 			<div class="table_controller" id="tableController">
 				<div class="result_count">
