[eunji][#update]기준정보 갈아엎음

--- a/KosaESS/src/main/resources/templates/admin/commoncode_list.html
+++ b/KosaESS/src/main/resources/templates/admin/commoncode_list.html
@@ -1060,7 +1060,8 @@
 	
 	//그룹코드 검색
 	function searchGroupCode(){
-		
+		//둘 중에 하나라도 검색되게
+		//새로 리로드
 	}
 	
 	//상세코드 검색
@@ -1075,6 +1076,7 @@
 		
 		if(tpcdId === "all" || cmcdNmInput === ""){
 			alert()
+			//select disabled되면 value못 가져옴 input hidden 필요
 		}
 	}
 	
