--- a/KosaESS/src/main/resources/templates/admin/insert_group_code_popup.html
+++ b/KosaESS/src/main/resources/templates/admin/insert_group_code_popup.html
@@ -14,7 +14,7 @@
 		<table>
 			<tr class="input_wrap">
 				<th><span class="title">코드구분<span class="red">*</span></span></th>
-				<td><input type="text" oninput="handleOnInput(this)"
+				<td><input type="text" oninput="handleOnInput(this)" onkeyup="if(window.event.keyCode==13){insertGroupCode();}"
 				class="group_code_tpcd_id" placeholder="ex) NTC" maxlength="3"></td>
 			</tr>
 			<tr class="input_wrap">
