--- a/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
@@ -23,13 +23,7 @@
 		<!-- title -->
 		<div class="title_wrap">
 			<span class="title" th:text="${title}"></span> <br>
-			<div style="display: none;">
-<!-- 			<div> -->
-<!-- 				input id="class_id_save" type="text"> -->
-<!-- 				input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}"> -->
-<!-- 				input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}"> -->
-<!-- 				input id="keyword_save" type="text"> -->
-			</div>
+			<div style="display: none;"></div>
 		</div>
 		<!-- content wrap-->
 		<div class="content_wrap">
@@ -37,16 +31,19 @@
 				<!-- 검색 필터 테이블 -->
 				<div class="insert_table">
 					<div class="insert_name">
-						교육과정
+						교육과정<span class="star">*</span>
 					</div>
 					<div class="insert_input">
+						<select>
+							<option th:each="yNum:${#numbers.sequence(__${#calendars.format(#calendars.createNow(), 'yyyy')}__,1980)}" th:text="${yNum}" th:value="${yNum}"/>
+						</select>
 						<select id="classId">
 							<option value="" disabled selected>교육과정명을 선택하세요</option>
 							<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 						</select>
 					</div>
 					<div class="insert_name">
-						지급 기준 연월
+						지급 기준 연월<span class="star">*</span>
 					</div>
 					<div class="insert_input">
 						<select id="start_date_y">
@@ -58,10 +55,16 @@
 							<option th:each="monthNum:${#numbers.sequence(1,12)}" th:text="${monthNum}" th:value="${monthNum}"/>
 						</select>
 					</div>
-					<div class="insert_name">교육일수</div>
+					<div class="insert_name">교육일수<span class="star">*</span></div>
 					<div class="insert_input">
-						<input type="number" class="input_workday">
+						<select id="start_date_m">
+							<option th:each="monthNum:${#numbers.sequence(1,12)}" th:text="${monthNum}" th:value="${monthNum}"/>
+						</select>
+						<input type="button" class="batch_input" value="일괄적용" onclick="batchInput(this)">
 					</div>
+					<div class="insert_name">지원금</div>
+					<div class="insert_input">10000<span>&nbsp;&#8361;</span></div>
+					<input type="button" class="batch_input" value="일괄적용" onclick="batchInput(this)">
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="insert_btn_wrap">
@@ -74,12 +77,11 @@
 			<div class="table_controller" id="tableController">
 				<div class="result_count">
 					<span>총&nbsp;</span>
-					<span th:text="${resultCount}" id="result_count"></span>
+					<span id="result_count">0</span>
 					<span>&nbsp;명</span>
 				</div>
-				<div class="mony_button">
-					<button th:each="monyCodeName:${monyCodeNameList}" onclick="cmptUpdate(this)" th:value="${monyCodeName.cmcdId}" th:text="${monyCodeName.cmcdNm}" class="mony_btn"></button>
-					<button onclick="location.href='/manager/subsidy_insert'" class="mony_btn">등록하기</button>
+				<div class="sbsd_button">
+					<button onclick="location.href='/manager/subsidy_insert'" class="sbsd_btn">삭제하기</button>
 				</div>
 			</div>
 			<!-- End : 테이블 조작 -->
@@ -94,29 +96,26 @@
 						<th>이메일</th>
 						<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>
 						<th>출석일수</th>
-						<th>교육일수</th>
-						<th>출석률<br>(%)</th>
-						<th>지원금</th>
+						<th>출석률(%)</th>
+						<th>지급예정액</th>
 						<th>지급일</th>
 						<th>지급상태</th>
 					</tr>
 				</thead>
-				<tbody id="subsidy_list_table_tbody" class="subsidy_list_table_tbody">
+				<tbody id="stdt_list_table_tbody">
 					<tr th:each="subsidy:${subsidyList}" class="subsidy_list_table_row">
 						<td class="fixed_length_cell">
-							<input type="checkbox" name="checkedStdt" th:value="${subsidy.monyId}">
+							<input type="checkbox" name="checkedStdt" th:value="${subsidy.sbsdId}">
 						</td>
 						<td class="fixed_length_cell" th:text="${subsidy.rowNum}">번호</td>
 						<td class="fixed_length_cell" th:text="${subsidy.stdtNm}">이름</td>
 						<td class="variable_length_cell" th:text="${subsidy.userEmail}">이메일</td>
-<!-- 						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(subsidy.wlog,',')[wlogCodeNameStat.count-1],10,)}">?</td> -->
-						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}">?</td>
+						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(subsidy.wlog,',')[wlogCodeNameStat.count-1],10,)}">?</td>
 						<td class="number_cell" th:text="${subsidy.wlogCnt}">출석일수</td>
-						<td class="number_cell" th:text="${subsidy.maxWlogCnt}">교육일수</td>
-						<td class="number_cell" th:text="${subsidy.wlogCnt / subsidy.maxWlogCnt * 100.0}">출석률</td>
-						<td class="number_cell" th:text="${subsidy.clssSubsidy}">지원금</td>
+						<td class="number_cell">출석률</td>
+						<td class="fixed_length_cell">지급예정액</td>
 						<td class="fixed_length_cell" th:text="${subsidy.paidDd}">지급일</td>
-						<td class="fixed_length_cell" th:text="${subsidy.monyNm}" th:value="${subsidy.monyCd}">지급상태</td>
+						<td class="fixed_length_cell" th:text="${subsidy.sbsdNm}" th:value="${subsidy.sbsdCd}">지급상태</td>
 					</tr>
 				</tbody>
 			</table>
@@ -127,5 +126,5 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/manager/alert_box.js"></script>
-<script src="/js/manager/student_list.js"></script>
+<script src="/js/manager/subsidy_insert.js"></script>
 </html>
